--- a/templates/tpos/_tpos.html
+++ b/templates/tpos/_tpos.html
@@ -2,10 +2,10 @@
   <q-card>
     <q-card-section>
       <p>
-        Thiago's Point of Sale is a secure, mobile-ready, instant and shareable
-        point of sale terminal (PoS) for merchants. The PoS is linked to your
-        LNbits wallet but completely air-gapped so users can ONLY create
-        invoices. To share the TPoS hit the hash on the terminal.
+        Point of Sale is a secure, mobile-ready, instant and shareable point of
+        sale terminal (PoS) for merchants. The PoS is linked to your LNbits
+        wallet but completely air-gapped so users can ONLY create invoices. To
+        share the TPoS hit the hash on the terminal.
       </p>
       <small
         >Created by
