Make UI better for mobile screens (#128)
* fix: make UI better for mobile screens

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -1,12 +1,4 @@
 {% extends "public.html" %} {% block toolbar_title %} {{ tpos.name }}
-<q-btn
-  flat
-  dense
-  size="md"
-  @click.prevent="urlDialog.show = true"
-  icon="share"
-  color="white"
-></q-btn>
 <q-btn-toggle
   v-model="monochrome"
   toggle-color="primary"
@@ -16,7 +8,6 @@
       ]"
   size="sm"
   @input="handleColorScheme"
-  class="q-ml-md"
 />
 {% endblock %} {% block footer %}{% endblock %} {% block page_container %}
 <q-page-container>
@@ -94,290 +85,10 @@
         </div>
       </q-page-sticky>
       <q-page-sticky position="top-right" :offset="[18, 18]">
-        <q-btn
-          @click="showLastPayments"
-          fab
-          icon="receipt_long"
-          color="primary"
-        ></q-btn
-      ></q-page-sticky>
-      <q-page-sticky position="top-right" :offset="[18, 90]">
-        <q-btn
-          @click="toggleFullscreen"
-          fab
-          :icon="fullScreenIcon"
-          color="primary"
-        ></q-btn>
-      </q-page-sticky>
-      <q-page-sticky position="top-right" :offset="[18, 162]">
-        <q-btn
-          @click="startAtmMode"
-          v-if="withdrawMaximum > 0 && !atmMode"
-          fab
-          icon="atm"
-          color="primary"
-        ></q-btn>
-      </q-page-sticky>
-      <q-page-sticky position="top-right" :offset="[18, 234]">
-        <q-btn
-          @click="showPoS = false"
-          v-if="items.length > 0"
-          fab
-          icon="point_of_sale"
-          color="primary"
-          :disable="atmMode"
-        ></q-btn>
-      </q-page-sticky>
-      <q-page-sticky position="top-right" :offset="[18, 306]">
-        <q-btn
-          @click="clearLNaddress"
-          v-if="tposLNaddress"
-          fab
-          icon="cancel_schedule_send"
-          color="primary"
-          ><q-tooltip>Clear LNaddress</q-tooltip></q-btn
-        >
+        {% include "tpos/_options_fab.html" %}
       </q-page-sticky>
     </template>
-    <template v-else>
-      <q-drawer
-        side="right"
-        v-model="cartDrawer"
-        show-if-above
-        bordered
-        :width="drawerWidth"
-        :breakpoint="1024"
-      >
-        <div class="row full-width q-pa-md">
-          <div class="absolute-top-right q-pa-md">
-            <q-btn @click="cartDrawer = !cartDrawer" icon="close" flat round
-              ><q-tooltip>Hide Cart</q-tooltip></q-btn
-            >
-          </div>
-          <div class="col-12 text-center">
-            <h3 class="q-mb-md">${totalFormatted}</h3>
-            <h5 v-show="!denomIsSats" class="q-mt-none q-mb-sm">
-              ${totalfsat}<small> sat</small>
-            </h5>
-          </div>
-          <div class="col-12" style="max-height: 60vh; overflow-y: auto">
-            <table class="table full-width">
-              <colgroup>
-                <col width="50%" />
-                <col width="25%" />
-                <col width="0%" />
-                <col width="0%" />
-              </colgroup>
-              <tbody>
-                <tr v-for="item in [...cart.values()]" :key="item.id">
-                  <td
-                    class="text-bold ellipsis"
-                    style="
-                      white-space: nowrap;
-                      text-overflow: ellipsis;
-                      overflow: hidden;
-                      max-width: 1px;
-                    "
-                  >
-                    ${item.title}
-                  </td>
-                  <td>
-                    <div
-                      class="flex justify-evenly"
-                      style="align-items: center"
-                    >
-                      <q-btn
-                        @click="removeFromCart(item)"
-                        flat
-                        dense
-                        round
-                        size="sm"
-                        icon="remove"
-                        :disabled="item.quantity == 1"
-                      ></q-btn>
-                      <div class="text-center">
-                        <span class="text-bold">${item.quantity}</span>
-                      </div>
-                      <q-btn
-                        @click="addToCart(item)"
-                        flat
-                        dense
-                        round
-                        size="sm"
-                        icon="add"
-                      ></q-btn>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="text-center">
-                      <span>${item.formattedPrice}</span>
-                    </div>
-                  </td>
-                  <td>
-                    <q-btn
-                      @click="removeFromCart(item, item.quantity)"
-                      color="negative"
-                      size="sm"
-                      round
-                      icon="delete"
-                    ></q-btn>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="row q-col-gutter-md q-pa-md absolute-bottom q-mb-lg">
-          <div v-if="total > 0" class="col-12">
-            <q-list dense padding class="rounded-borders">
-              <q-item>
-                <q-item-section> Subtotal </q-item-section>
-                <q-item-section side v-text="taxSubtotal"></q-item-section>
-              </q-item>
-              <q-item>
-                <q-item-section
-                  v-text="`Tax ${taxInclusive ? '(incl.)' : ''}`"
-                ></q-item-section>
-                <q-item-section side v-text="formattedCartTax"></q-item-section>
-              </q-item>
-              <q-separator></q-separator>
-              <q-item>
-                <q-item-section> Total </q-item-section>
-                <q-item-section side> ${totalFormatted} </q-item-section>
-              </q-item>
-            </q-list>
-          </div>
-          <div class="col-12 col-sm-6">
-            <q-btn
-              class="full-width"
-              @click="submitForm"
-              color="positive"
-              label="Pay"
-              padding="md"
-              :disabled="cart.size == 0"
-            ></q-btn>
-          </div>
-          <div class="col-12 col-sm-6">
-            <q-btn
-              class="full-width"
-              @click="clearCart"
-              color="negative"
-              label="Clear cart"
-              padding="md"
-            ></q-btn>
-          </div>
-        </div>
-      </q-drawer>
-      <div class="row justify-center q-col-gutter-md q-pa-md">
-        <div class="col-12 col-sm-8 col-md-6">
-          <q-input v-model="searchTerm" label="Filter">
-            <q-icon
-              v-if="searchTerm !== ''"
-              name="close"
-              @click="searchTerm = ''"
-              class="cursor-pointer"
-            />
-          </q-input>
-        </div>
-      </div>
-      <div
-        v-if="categories && categories.length"
-        class="flex justify-center q-pa-md q-gutter-md"
-      >
-        <template v-for="category in Array.from(categories.values())">
-          <q-btn
-            color="secondary"
-            :size="$q.screen.gt.sm ? 'lg' : 'md'"
-            :padding="$q.screen.gt.sm ? 'lg' : 'md'"
-            :label="category"
-            @click="handleCategoryBtn(category)"
-            :outline="!(categoryFilter === category || (categoryFilter === '' && category === 'All'))"
-          ></q-btn>
-        </template>
-      </div>
-      <div v-if="$q.screen.gt.sm" class="row q-col-gutter-md q-pa-md">
-        <div
-          class="col-6 col-md-4 col-lg-3"
-          v-for="item in filteredItems"
-          :key="item.name"
-        >
-          <q-card class="full-height column">
-            <img
-              v-if="item.image"
-              class="q-pa-md responsive-img"
-              :src="item.image"
-            />
-
-            <q-card-section class="q-mt-auto">
-              <div class="text-h6">${item.title}</div>
-              <div class="text-subtitle1">
-                ${item.formattedPrice}
-                <span v-if="item.tax || taxDefault" class="text-caption">
-                  (tax ${taxInclusive ? 'incl.' : 'excl.'} ${item.tax ||
-                  taxDefault}%)
-                </span>
-              </div>
-              <div
-                v-if="item.description"
-                class="text-caption ellipsis-2-lines q-py-sm"
-              >
-                ${item.description}
-              </div>
-            </q-card-section>
-
-            <q-card-actions vertical class="q-pa-md">
-              <q-btn @click="addToCart(item)" padding="md" color="primary"
-                >Add</q-btn
-              >
-            </q-card-actions>
-          </q-card>
-        </div>
-      </div>
-      <div v-else class="q-pa-md">
-        <item-list
-          :items="filteredItems"
-          :inclusive="taxInclusive"
-          :format="formatAmount"
-          :currency="currency"
-          @add-product="addToCart"
-        >
-        </item-list>
-      </div>
-      <q-page-sticky position="bottom-right" :offset="[18, 18]">
-        <q-btn
-          @click="showPoS = true"
-          fab
-          icon="dialpad"
-          color="primary"
-        ></q-btn
-      ></q-page-sticky>
-      <q-page-sticky position="bottom-right" :offset="[18, 90]">
-        <q-btn
-          @click="cartDrawer = !cartDrawer"
-          fab
-          :icon="cartDrawer ? 'chevron_right' : 'chevron_left'"
-          color="primary"
-          ><q-tooltip
-            >${cartDrawer ? 'Hide Cart' :' Open Cart'}</q-tooltip
-          ></q-btn
-        ></q-page-sticky
-      >
-      <q-page-sticky
-        v-if="!cartDrawer && cart.size > 0"
-        position="bottom-right"
-        :offset="[18, 162]"
-      >
-        <q-btn
-          @click="cartDrawer = !cartDrawer"
-          fab
-          icon="shopping_bag"
-          color="primary"
-          ><q-badge color="red" floating
-            >${[...this.cart.values()].reduce((a,i)=>a+i.quantity,0)}</q-badge
-          ></q-btn
-        ></q-page-sticky
-      >
-    </template>
+    <template v-else> {% include "tpos/_cart.html" %} </template>
     {% include "tpos/dialogs.html" %}
   </q-page>
 </q-page-container>
