feat: add enable printing

--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -355,7 +355,13 @@
           <div class="col">
             <q-checkbox
               v-model="formDialog.advanced.otc"
-              label="Enable selling Bitcoin (ATM)"
+              label="Enable selling BTC (ATM)"
+            ></q-checkbox>
+          </div>
+          <div class="col">
+            <q-checkbox
+              v-model="formDialog.data.enable_receipt_print"
+              label="Enable receipt printing"
             ></q-checkbox>
           </div>
         </div>
