fix: consistent numeric keyboard mobile

--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -379,6 +379,7 @@
             use-chips
             hide-dropdown-icon
             input-debounce="0"
+            inputmode="numeric"
             new-value-mode="add-unique"
             label="Tip % Options (hit enter to add values)"
             ><q-tooltip>Hit enter to add values</q-tooltip>
