--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -207,11 +207,13 @@
         <div class="text-h6">Withdraw PIN</div>
       </q-card-section>
       <q-card-section>
-        <q-form autofocus @submit="atmSubmit" class="q-gutter-md">
+        <q-form @submit="atmSubmit" class="q-gutter-md">
           <q-input
+            autofocus
             filled
             :type="hidePin ? 'password' : 'number'"
             v-model.number="atmPin"
+            inputmode="numeric"
             ><template v-slot:append>
               <q-icon
                 :name="hidePin ? 'visibility_off' : 'visibility'"
