--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -361,10 +361,16 @@
           <div class="col">
             <q-checkbox
               v-model="formDialog.data.enable_receipt_print"
-              label="Enable receipt printing"
+              label="Enable printing (experimental)"
             ></q-checkbox>
           </div>
         </div>
+        <template v-if="formDialog.data.enable_receipt_print">
+          <p class="text-caption">
+            Receipt printing is an experimental feature. Not all devices work
+            correctly, or work at all.
+          </p>
+        </template>
         <template v-if="formDialog.advanced.tips">
           <q-select
             filled
