add business details to receipt

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -140,7 +140,7 @@
     <q-card class="lnbits__dialog-card">
       <q-card-section class="row items-center q-pb-sm">
         <q-space></q-space>
-        <q-btn icon="close" flat round dense v-close-popup></q-btn>
+        <q-btn icon="close" size="sm" flat round dense v-close-popup></q-btn>
       </q-card-section>
       <q-list separator class="q-mb-lg">
         <q-item v-if="!lastPaymentsDialog.data.length">
