fix: only show print if enabled

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -174,7 +174,7 @@
               >Hash: ${payment.checking_id.slice(0, 30)}...</q-item-label
             >
           </q-item-section>
-          <q-item-section side>
+          <q-item-section side v-if="enablePrint">
             <q-btn
               round
               icon="print"
