Adding fiat option if fiat funding source is available
I think prob best play if its available is to do
https://stripe-payment-link.com?lightning=lnbc..

that way the invoice could be scanned with a qrcode scanner to pay the stripe invoice and then also scanned with bitcoin wallet to pay.
Useful for selling OTC bits, and for merchants who don't want to be running 2 pos solutions.

only display fiat if it's available

fetch fiat payment

separation of concerns

show fiat QR supported

pass fiat amounts to backend

send fiat payment to UI

fix wrong amounts using new method

chore: lint

clean logs

working

Made dialog simpler

creates a weird look to qrcodes on mobile

i was wrong

--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -318,6 +318,24 @@
           :options="currencyOptions"
           label="Currency *"
         ></q-select>
+        <q-select
+          v-if="formDialog.data.currency != '{{LNBITS_DENOMINATION}}' && hasFiatProvider"
+          filled
+          dense
+          emit-value
+          v-model="formDialog.data.fiat_provider"
+          :options="fiatProviders"
+          label="Fiat payments"
+          hint="Choose what fiat platform to use for fiat payments."
+        >
+          <template v-if="formDialog.data.fiat_provider" v-slot:append>
+            <q-icon
+              name="cancel"
+              @click.stop.prevent="formDialog.data.fiat_provider = null"
+              class="cursor-pointer"
+            />
+          </template>
+        </q-select>
         <div class="row">
           <div class="col">
             <q-checkbox
@@ -346,6 +364,18 @@
               ></q-tooltip>
             </q-input>
           </div>
+          <!-- <div class="col" v-if="hasFiatProvider">
+            <q-checkbox
+              v-model="formDialog.data.fiat"
+              label="Fiat invoicing"
+            >
+              <q-tooltip>
+                <span
+                  v-text="'If enabled, tpos will fetch fiat invoices. Server admin needs to have fiat invoicing enabled.'"
+                ></span
+              ></q-tooltip>
+            </q-checkbox>
+          </div> -->
         </div>
         <div class="row">
           <div class="col">
