feat: allow custom memo

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -181,6 +181,14 @@
               color="primary"
               @click="printReceipt(payment.checking_id)"
             ></q-btn>
+            <!-- TODO: Update payment extra -->
+            <!-- <q-icon
+                  name="add_comment"
+                  size="sm"
+                  @click="addComment"
+                  class="cursor-pointer"
+                  color="grey"
+                ><q-tooltip>Add a comment</q-tooltip></q-icon> -->
           </q-item-section>
         </q-item>
       </q-list>
