todo when PR 3258 is ready

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -181,7 +181,7 @@
               color="primary"
               @click="printReceipt(payment.checking_id)"
             ></q-btn>
-            <!-- TODO: Update payment extra -->
+            <!-- TODO: Update payment extra PR #3258 -->
             <!-- <q-icon
                   name="add_comment"
                   size="sm"
